welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:4: error: not found: type x
    if (nums[x]==lookingFor) {
             ^occurrences:4: error: value nums of type Array[Int] does not take type parameters.
    if (nums[x]==lookingFor) {
            ^